--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -483,7 +483,7 @@
                                          (click)="showPhotoFull(plan.fullImage)">
 
                                     <button class="btn btn-sm btn-danger removeItemCarousel" [disabled]="!hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO')"
-                                            (click)="removeByGuid(photo, 1)"><i class="fa fa-trash fa-2x"
+                                            (click)="removeByGuid(plan, 1)"><i class="fa fa-trash fa-2x"
                                                                                 aria-hidden="true"></i></button>
                                   </div>
                                 </div>
