--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -19,18 +19,18 @@
             </div>
           </div>
 
-          <div class="d-flex justify-content-around">
-            <div>
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" [ngModel]="loginForm.rememberMe" id="defaultLoginFormRemember"
-                       formControlName="rememberMe" />
-                <label class="custom-control-label" for="defaultLoginFormRemember">Запомнить меня</label>
-              </div>
-            </div>
-            <div>
-              <a href="">Забыли пароль?</a>
-            </div>
-          </div>
+<!--          <div class="d-flex justify-content-around">-->
+<!--            <div>-->
+<!--              <div class="custom-control custom-checkbox">-->
+<!--                <input type="checkbox" class="custom-control-input" [ngModel]="loginForm.rememberMe" id="defaultLoginFormRemember"-->
+<!--                       formControlName="rememberMe" />-->
+<!--                <label class="custom-control-label" for="defaultLoginFormRemember">Запомнить меня</label>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--              <a href="">Забыли пароль?</a>-->
+<!--            </div>-->
+<!--          </div>-->
           <button class="btn btn-info btn-block my-4" (click)="login()">
             Вход
           </button>
