--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm" [formGroup]="applicationLightForm">
           <div class="form-group row">
-            <label for="surName" class="col-sm-3 col-form-label" translate>surname
+            <label for="surName" class="col-sm-3 float-left" translate>surname
               <span class="text-danger" *ngIf="!applicationLightForm.value.surName">&nbsp;*</span>
             </label>
             <div class="col-sm">
