--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
 <!--              <a href="">Забыли пароль?</a>-->
 <!--            </div>-->
 <!--          </div>-->
-          <button class="btn btn-info btn-block my-4" (click)="login()">
+          <button class="btn btn-primary btn-block my-4" (click)="login()">
             Вход
           </button>
 
