--- a/frontend/src/app/helpers/footer/footer.component.html
+++ b/frontend/src/app/helpers/footer/footer.component.html
@@ -1,8 +1,5 @@
 <footer class="page-footer font-small blue fixed-bottom">
   <div class="footer-copyright text-center py-3">© {{year}} Copyright:
-    <a > htc.dilau.kz</a>
-  </div>
-  <div class=" text-center py-1">
-    {{currentApplicationVersion}}
+    <a > htc.dilau.kz</a>  v: {{currentApplicationVersion}}
   </div>
 </footer>
