--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,9 +4,13 @@
 
 /* You can add global styles to this file, and also import other style files */
 body {
+  height: 100%;
   font-family: 'Cuprum', sans-serif !important;
 }
-
+.wrapper {
+  height:auto !important;
+  min-height:100%;
+}
 .navbar {
   font-weight: bolder;
   font-size: 18px;
@@ -40,13 +44,6 @@ body {
       }
     }
   }
-}
-
-.createClaimBtn {
-  position: fixed;
-  right: 1%;
-  bottom: 10%;
-  z-index: 1000;
 }
 
 .form-control {
